[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Enemies/Goblin/Bomb_sprite.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/BombShoot.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=16]
radius = 21.1896

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[node name="BombShoot" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AreaExplosion" type="CollisionShape2D" parent="."]
modulate = Color( 0.745098, 0.0627451, 0.0627451, 1 )
shape = SubResource( 16 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 15 )
animation = "shoot"
speed_scale = 3.0
playing = true

[node name="TimerExplode" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="TimerExplode" to="." method="_on_TimerExplode_timeout"]
